--- a/trunk/SistemaContable/src/interfaz/IntFrmContabilidad.form
+++ b/trunk/SistemaContable/src/interfaz/IntFrmContabilidad.form
@@ -73,6 +73,9 @@
           </Layout>
           <SubComponents>
             <Container class="javax.swing.JDesktopPane" name="DesktopPanePlanCuentas">
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
 
               <Layout>
                 <DimensionLayout dim="0">
@@ -106,7 +109,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="DesktopPaneLibroDiario" alignment="0" max="32767" attributes="0"/>
+                  <Component id="DesktopPaneLibroDiario" alignment="1" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
